src/_includes/assets/css/variables.css
:root {
  --font-mono: 'Roboto Mono', system-ui, Helvetica, Arial, sans-serif;
  --font-body: system-ui, Helvetica, Arial, sans-serif;

  --line-height: 1.5;

  /* --bg: #fff9fc; */
  --text-color: #32325a;
  --text-secondary-color: #68757b;

  --dark-bg: #2d2a2a;
  --dark-text-color: #fff;

  --primary: #6272a4;
  --primary-shadow: hsla(232, 14%, 31%, 0.12);

  --blockquote-color: #73728c;

  --separator-color: #d0d6d8;
  --focus-color: #ffa611;

  --standout-bg: #ececf8;
  --standout-shadow: 0 2px 2px #d7d6ea, 0 0 0 1px #dfdee6;

  --code-bg: #1e1e3f;
  --inline-code-bg: #ece4e9;

  --visited-link-color: #0c9c38;

  --reading-time-color: #800080;
}

:root[data-theme='dark'] {
  --bg: #282a36;

  --text-color: #f8f8f2;
  --text-secondary-color: #a8bcc5;
  --blockquote-color: #bababd;

  --primary: #ff5555;
  --primary-shadow: hsla(0, 100%, 67%, 0.12);

  --separator-color: #545353;

  --standout-bg: #484848;
  --standout-shadow: 0 2px 2px #292828, 0 0 0 1px #292828;

  --code-bg: #1d1f21;
  --inline-code-bg: #444444;

  --reading-time-color: #bd93f9;
}

